# cgexp

./: .gitignore  Automaton.hs  LICENSE  Main.hs  README.md  Rule.hs  Test.hs  anbn-ADD.rlx  cgexp.cabal  ex-anbn-ADD.txt  ex-anbn.txt  ex-anbncn.txt
app/: Main.hs
cfg-parsing/: Earley.hs  pda.md
examples/: anbn-cgsat.ape  runExample.sh
examples/anbn/: anbn-cgsat.readings  anbn-cgsat.rlx  anbn.rlx  anbncn.rlx
examples/detAdjN/: detAdjN.rlx  detAdjN.rlx~  ex-detAdjN-1.txt  ex-detAdjN-2.txt  ex-detAdjN-3.txt  ex-detAdjN-4.txt  ex-detAdjN.txt  ex-detAdjN.txt~
examples/detNounV/: detNounV.rlx  ex-detNounV-1.txt  ex-detNounV-2.txt  ex-detNounV-3.txt  ex-detNounV-4.txt  ex-detNounV.txt~
examples/random/: ex-random-10.txt  ex-random-2.txt  ex-random-3.txt  ex-random-4.txt  ex-random-6txt  ex-random-7.txt  ex-random-8.txt  ex-random-9.txt  random.rlx
paper/: CG-workshop-2017.md
paper/nodalida2017/: astar.input  astar.rlx  cg.bib  nodalida2017.aux  nodalida2017.bbl  nodalida2017.blg  nodalida2017.sty  nodalida2017.tex
src/: Arbitrary.hs  Automaton.hs  Cohort.hs  Rule.hs
test/: Spec.hs
